[tool.poetry]
name = "songdkl"
version = "0.1.0"
description = "automated quantitation of vocal learning in songbirds"
authors = ["David Nicholson <nickledave@users.noreply.github.com>"]
license = "BSD"
classifiers = [
        'License :: OSI Approved :: BSD License',
        'Development Status :: 4 - Beta',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: Implementation :: CPython'
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
scikit-learn = "^0.24.0"
mahotas = "^1.4.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
twine = "^3.3.0"
Sphinx = "^3.4.1"

[tool.poetry.scripts]
songdkl = 'songdkl.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
