[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "songdkl"
version = "0.1.0"
description = "automated quantitation of vocal learning in songbirds"
authors = [{name = "David Nicholson", email = "nickledave@users.noreply.github.com"}]
license = {file = "LICENSE"}
classifiers = [
        'License :: OSI Approved :: BSD License',
        'Development Status :: 4 - Beta',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: Implementation :: CPython'
]
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.19.4",
    "scipy >=1.5.4",
    "matplotlib >= 3.3.3",
    "scikit-learn >= 0.24.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 6.2.1",
    "pytest-cov >=2.12.0",
]
dev = [
    "flit",
    "twine",
]
doc = [
    "jupyterlab >=3.0.3",
    "Sphinx >= 3.4.1",
]

[project.scripts]
songdkl = 'songdkl.__main__:main'

[project.urls]
Home = "https://github.com/NickleDave/songdkl"
