[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "songdkl"
version = "0.2.0"
description = "automated quantitation of vocal learning in songbirds"
authors = [
    {name = "David Mets"},
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
        'License :: OSI Approved :: BSD License',
        'Development Status :: 4 - Beta',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: Implementation :: CPython'
]
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.19.4",
    "scipy >=1.5.4",
    "matplotlib >= 3.3.3",
    "rich >=12.5.1",
    "scikit-image >= 0.19.3",
    "scikit-learn >= 0.24.0",
    "zarr >=2.13.3",
]

[project.optional-dependencies]
tests = [
    "pandas >= 1.4.4",
    "pytest >= 6.2.1",
    "pytest-cov >=2.12.0",
    "pytest-console-scripts >= 1.3.1",
]
docs = [
    "jupyterlab >=3.0.3",
    "Sphinx >= 3.4.1",
]
dev = [
    "flit",
    "twine",
    "songdkl[tests, docs]",
]

[project.scripts]
songdkl = 'songdkl.__main__:main'

[project.urls]
Home = "https://github.com/NickleDave/songdkl"


[tool.pytest.ini_options]
markers = [
    "smoke: quick tests to check if anything is broken (because its 'smoking')",
]
